--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -39,6 +39,7 @@
    $type-size-4                : 1.25em;   // ~20px
    $type-size-5                : 1em;      // ~16px
    $type-size-6                : 0.75em;   // ~12px
+   $type-size-6-5              : 0.7em; // ~11px
    $type-size-7                : 0.6875em; // ~11px
    $type-size-8                : 0.625em;  // ~10px
    $type-size-syntax           : 0.875em;  // ~14px
